<resources>
    <string name="app_name">TwoTouchMail</string>
    <string name="button_pickup">むかえにきて</string>
    <string name="button_no_dinner">めしいらない</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_send">送信</string>
    <string name="subject">件名</string>
    <string name="place">場所</string>
    <string name="station">駅</string>
    <string name="school">学校</string>
    <string name="always">いつもの場所</string>
    <string name="mail_to">test@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pick_up">PickUpActivity</string>
    <string name="title_activity_no_dinner">NoDinnerActivity</string>
</resources>
